@@ -7,11 +7,11 @@ Operator catalog:
 -------------------------------------------------------------
    Information
 -------------------------------------------------------------
-   Info          info            Dataset information listed by code number
-   Info          infov           Dataset information listed by variable name
+   Info          info            Dataset information listed by parameter identifier
+   Info          infon           Dataset information listed by parameter name
    Info          map             Dataset information and simple map
-   Sinfo         sinfo           Short dataset information listed by parameter identifier
-   Sinfo         sinfon          Short dataset information listed by parameter name
+   Sinfo         sinfo           Short information listed by parameter identifier
+   Sinfo         sinfon          Short information listed by parameter name
    Diff          diff            Compare two datasets listed by code number
    Diff          diffv           Compare two datasets listed by variable name
    Ninfo         npar            Number of parameters
