@@ -302,7 +302,7 @@ void *Wct(void *argument);
 #define  ImportbinaryOperators  {"import_binary", "import_grads"}
 #define  ImportcmsafOperators   {"import_cmsaf"}
 #define  ImportobsOperators     {"import_obs"}
-#define  InfoOperators          {"info", "infov", "infop", "map"}
+#define  InfoOperators          {"info", "infop", "infon", "infoc", "map"}
 #define  InputOperators         {"input", "inputsrv", "inputext"}
 #define  IntgridOperators       {"intgridbil", "intpoint", "interpolate", "boxavg", "thinout"}
 #define  IntgridtrajOperators   {"intgridtraj"}
@@ -723,6 +723,7 @@ static char *opalias[][2] =
   {"globavg",             "fldavg"     },
   {"gradsdes",            "gradsdes2"  },
   {"infos",               "sinfo"      },
+  {"infov",               "infon"      },
   {"intgrid",             "intgridbil" },
   {"log",                 "ln"         },
   {"lmean",               "ymonmean"   },
