@@ -2,7 +2,7 @@
 
 static char *InfoHelp[] = {
     "NAME",
-    "    info, infov, map - Information and simple statistics",
+    "    info, infon, map - Information and simple statistics",
     "",
     "SYNOPSIS",
     "    <operator>  ifiles",
@@ -14,17 +14,17 @@ static char *InfoHelp[] = {
     "    The information displayed depends on the chosen operator.",
     "",
     "OPERATORS",
-    "    info   Dataset information listed by code number",
+    "    info   Dataset information listed by parameter identifier",
     "           Prints information and simple statistics for each field of all",
     "           input datasets. For each field the operator prints one line with the following elements:",
     "           - Date and Time",
-    "           - Code number and Level",
+    "           - Parameter identifier and Level",
     "           - Size of the grid and number of Missing values",
     "           - Minimum, Mean and Maximum \\",
     "           The mean value is computed without the use of area weights!",
-    "    infov  Dataset information listed by variable name",
-    "           The same as operator info but using the name instead of the code",
-    "           number to identify the variables.",
+    "    infon  Dataset information listed by parameter name",
+    "           The same as operator info but using the name instead of the",
+    "           identifier to label the parameter.",
     "    map    Dataset information and simple map",
     "           Prints information, simple statistics and a map for each field of all input",
     "           datasets. The map will be printed only for fields on a regular lon/lat grid.",
@@ -45,7 +45,7 @@ static char *SinfoHelp[] = {
     "    The information displayed depends on the chosen operator.",
     "",
     "OPERATORS",
-    "    sinfo   Short dataset information listed by parameter identifier",
+    "    sinfo   Short information listed by parameter identifier",
     "            Prints short information of a dataset. The information is divided into",
     "            4 sections. Section 1 prints one line per parameter with the following information:",
     "            - institute and source",
@@ -54,7 +54,7 @@ static char *SinfoHelp[] = {
     "            - number of vertical levels and z-axis number",
     "            Section 2 and 3 gives a short overview of all horizontal and vertical grids.",
     "            And the last section contains short information of the time axis.",
-    "    sinfon  Short dataset information listed by parameter name",
+    "    sinfon  Short information listed by parameter name",
     "            The same as operator sinfo but using the name instead of the ",
     "            identifier to label the parameter.",
     NULL
